--- a/system_huellitas/views/public/productos_perros_comida.html
+++ b/system_huellitas/views/public/productos_perros_comida.html
@@ -22,11 +22,10 @@
     <main class="mt-5 p-5">
         <div class="container-fluid bg-white p-5 d-flex justify-content-center rounded-5">
             <div class="row d-flex gy-5">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow">
                         <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product2.png" width="250px" height="290px" class="p-3"
-                                alt="...">
+                            <img src="../../resources/img/png/producto2.png" class="p-3 img-fluid" alt="...">
                         </div>
                         <div class="card-body">
                             <div class="row">
@@ -43,85 +42,169 @@
                             </div>
                             <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
                             <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3"
-                                alt="...">
-                        </div>
-                        <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
-                                    <h5 class="card-title fw-bold">$15</h5>
-                                </div>
-                                <div class="col-5">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                </div>
-                            </div>
-                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3"
-                                alt="...">
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-7">
-                                    <h5 class="card-title fw-bold">$15</h5>
-                                </div>
-                                <div class="col-5">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                </div>
-                            </div>
-                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <div class="col-sm-12 col-md-3">
-                        <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
-                            <div class="d-flex justify-content-center align-items-center">
-                                <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
-                                    alt="...">
-                            </div>
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-7">
-                                        <h5 class="card-title fw-bold">$15</h5>
-                                    </div>
-                                    <div class="col-5">
-                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                <div class="col-9">
+                                    <div class="text-start">
+                                        <button type="button" class="btn btn-orange-color text-white .fs-6 text"
+                                            id="Ver_producto_perros">Ver producto</button>
                                     </div>
                                 </div>
-                                <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                                <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                                <div class="col-3">
+                                    <div class="container text-end">
+                                        <img src="../../resources/img/png/carrito_naranja.png" width="30px">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="../../resources/img/png/producto2.png" class="p-3 img-fluid" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h5 class="card-title fw-bold">$50</h5>
+                                </div>
+                                <div class="col-5">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                </div>
+                            </div>
+                            <p class="card-text small fw-light mb-0 mt-1">PURINA</p>
+                            <p class="fw-bold">Bolsa Propac - Perro joven</p>
+                            <div class="row">
+                                <div class="col-9">
+                                    <div class="text-start">
+                                        <button type="button" class="btn btn-orange-color text-white .fs-6 text"
+                                            id="Ver_producto_perros">Ver producto</button>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="container text-end">
+                                        <img src="../../resources/img/png/carrito_naranja.png" width="30px">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="../../resources/img/png/producto2.png" class="p-3 img-fluid" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h5 class="card-title fw-bold">$15</h5>
+                                </div>
+                                <div class="col-5">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                </div>
+                            </div>
+                            <p class="card-text small fw-light mb-0 mt-1">PEDIGREE</p>
+                            <p class="fw-bold">Bolsa Pedigree - Perro mayor</p>
+                            <div class="row">
+                                <div class="col-9">
+                                    <div class="text-start">
+                                        <button type="button" class="btn btn-orange-color text-white .fs-6 text"
+                                            id="Ver_producto_perros">Ver producto</button>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="container text-end">
+                                        <img src="../../resources/img/png/carrito_naranja.png" width="30px">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="../../resources/img/png/producto2.png" class="p-3 img-fluid" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h5 class="card-title fw-bold">$15</h5>
+                                </div>
+                                <div class="col-5">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                </div>
+                            </div>
+                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            <div class="row">
+                                <div class="col-9">
+                                    <div class="text-start">
+                                        <button type="button" class="btn btn-orange-color text-white .fs-6 text"
+                                            id="Ver_producto_perros">Ver producto</button>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="container text-end">
+                                        <img src="../../resources/img/png/carrito_naranja.png" width="30px">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="../../resources/img/png/producto2.png" class="p-3 img-fluid" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h5 class="card-title fw-bold">$15</h5>
+                                </div>
+                                <div class="col-5">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                </div>
+                            </div>
+                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            <div class="row">
+                                <div class="col-9">
+                                    <div class="text-start">
+                                        <button type="button" class="btn btn-orange-color text-white .fs-6 text"
+                                            id="Ver_producto_perros">Ver producto</button>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="container text-end">
+                                        <img src="../../resources/img/png/carrito_naranja.png" width="30px">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
         </div>
     </main>
 
