--- a/system_huellitas/views/public/index.html
+++ b/system_huellitas/views/public/index.html
@@ -65,28 +65,61 @@
                     <img src="../../resources/img/png/dog_marcas.png">
                 </div>
                 <div class="col-md-10 col-sm-12">
-                    <p class="fw-semibold mt-5 fs-5 mb-0">¿Estas buscando productos de una marca en especifíco?</p>
-                    <p class="mb-5 fw-light"> Estas son nuestras marcas más compradas</p>
-                    <div class="row d-flex justify-content-center align-items-center text-center gy-4">
-                        <div class="col-12 col-md-3">
-                            <img src="../../resources/img/png/ruffo.png" class="picture rounded-circle" alt="">
+                    <p class="fw-semibold mt-5 fs-5 mb-2">Todas tus marcas favoritas en un solo lugar</p>
+
+                    <div id="carouselMarcas" class="carousel slide d-flex justify-content-center"
+                    data-bs-ride="carousel">
+                    <ul class="carousel-indicators">
+                        <li data-bs-target="#carouselMarcas" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carouselMarcas" data-bs-slide-to="1"></li>
+                    </ul>
+                    <div class="carousel-inner text-center p-5">
+                        <div class="carousel-item active">
+                            <div class="row d-flex justify-content-center gx-5 gy-4">
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/ruffo.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/doggi.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/ruffo.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/ruffo.png" class="rounded-circle">
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-3">
-                            <img src="../../resources/img/png/doggi.png" class="picture rounded-circle" alt="">
-                        </div>
-                        <div class="col-12 col-md-3">
-                            <img src="../../resources/img/png/ruffo.png" class="picture rounded-circle" alt="">
-                        </div>
-                        <div class="col-12 col-md-3">
-                            <img src="../../resources/img/png/doggi.png" class="picture rounded-circle" alt="">
+                        <div class="carousel-item">
+                            <div class="row d-flex justify-content-center gx-5 gy-4">
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/ruffo.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/doggi.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/ruffo.png" class="rounded-circle">
+                                </div>
+                                <div class="col-auto">
+                                    <img src="../../resources/img/png/doggi.png" class="rounded-circle">
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#carouselMarcas" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselMarcas" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </a>
+                </div>
                 </div>
             </div>
         </div>
 
         <!-- Titulo de productos -->
-        <div class="text-center mt-5 mb-5">
+        <div class="text-center mt-4 mb-5">
             <h2 class="fw-bold">Productos</h2>
             <p>Explora nuestros productos y conciente a tus peluditos</p>
         </div>
@@ -96,7 +129,7 @@
                 <div class="col-sm-6 col-md-3">
                     <div class="card rounded-4 shadow">
                         <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product2.png" width="250px" height="290px" class="p-3"
+                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
                                 alt="...">
                         </div>
                         <div class="card-body">
@@ -189,7 +222,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
