--- a/system_huellitas/views/public/terminos_condiciones.html
+++ b/system_huellitas/views/public/terminos_condiciones.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/static_components/menu_public.css">
+    <!-- Agregamos el archivo css de la página-->
     <link type="text/css" rel="stylesheet" href="../../resources/css/public/terminos_condiciones.css">
 </head>
 
