productos vista desde lejos terminada

--- a/system_huellitas/views/public/productos_gatos_comida.html
+++ b/system_huellitas/views/public/productos_gatos_comida.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huellitas pets - productos perro cuidados</title>
+    <title>Huellitas pets - productos gatos comida</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
@@ -25,11 +25,11 @@
             <br>
             <div class="row">
                 <div class="col-1 px-5 text-end">
-                    <img src="../../resources/img/png/dog_products.png" width="90px">
+                    <img src="../../resources/img/png/cat_products.png" width="90px">
                 </div>
                 <div class="col-11">
                     <h1 class="p-3 text-start">
-                        Perros
+                        Gatos
                     </h1>
                 </div>
             </div>
